--- a/src/Components/Sidebar/Sidebar.module.css
+++ b/src/Components/Sidebar/Sidebar.module.css
@@ -1,6 +1,7 @@
 .sidebar {
   grid-area: s;
   background-color: #565648;
-  margin: 0.5%;
-  padding: 10px;
+  align-content: center;
+  text-align: center;
+  vertical-align: center;
 }
